--- a/index.html
+++ b/index.html
@@ -6,11 +6,237 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/7bd21f73f1.js" crossorigin="anonymous"></script>
     <title>Influencer Gears</title>
 </head>
 
 <body>
-
+    <header>
+        <h4>Influencer Products</h4>
+    </header>
+    <section class="top-banner container">
+        <div class="half-width">
+            <h1>Start your Journey as Influencer</h1>
+            <p>
+                An influencer is someone in your niche or industry with sway over your target audience. Influencers have
+                specialized knowledge, authority or insight into a specific subject. Their pre-existing presence in a
+                niche
+                makes them a useful launching pad for brands in search of credibility.
+            </p>
+            <a class="link-button" href="" target="_blank">Prebook now<i
+                    class="fas fa-arrow-right link-button-icon"></i> </a>
+        </div>
+        <div class="half-width">
+            <img class="top-banner" src="images/main-camera.png" alt="fujifilm camera">
+        </div>
+    </section>
+    <section class="top-products container">
+        <h3>Popular Collection</h3>
+        <div class="products">
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/tripod.png" alt="tripod">
+                </div>
+                <div class="product-details">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/mic.png" alt="microphone">
+                </div>
+                <div class="product-details">
+                    <h3>microphone</h3>
+                    <h4>$120.25</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/airpod.png" alt="airpods">
+                </div>
+                <div class="product-details">
+                    <h3>Air Buds</h3>
+                    <h4>$100.00</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/drone.png" alt="drone">
+                </div>
+                <div class="product-details">
+                    <h3>drone</h3>
+                    <h4>$980.25</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/lights.png" alt="Lights">
+                </div>
+                <div class="product-details">
+                    <h3>Light Setup</h3>
+                    <h4>$1200.00</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/setup.png" alt="photoshoot setup">
+                </div>
+                <div class="product-details">
+                    <h3>Photoshoot Setup</h3>
+                    <h4>$820.40</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/camera.png" alt="video camera">
+                </div>
+                <div class="product-details">
+                    <h3>Vlogging Camera</h3>
+                    <h4>$1800.80</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/single-light.png" alt="green screen">
+                </div>
+                <div class="product-details">
+                    <h3>Green screen</h3>
+                    <h4>$25.48</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="images/action.png" alt="action camera">
+                </div>
+                <div class="product-details">
+                    <h3>Action Camera</h3>
+                    <h4>$380.00</h4>
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Worldwide shifting available</p>
+                    <p>Buyers Protection possible!</p>
+                </div>
+            </div>
+        </div>
+        <div class="see-more">
+            <div class="more">
+                <p>See More<i class="fas fa-arrow-right"></i></p>
+            </div>
+        </div>
+    </section>
+    <section class="master-class container">
+        <div class="master-image">
+            <img class="master-img" src="images/masterclass.jpg" alt="fujifilm camera">
+        </div>
+        <div class="master-details">
+            <h2>Start your training now</h2>
+            <p>
+                Influencer Training is a leadership course that teaches proven strategies to drive rapid and sustainable
+                behavior change for teams and organizations. By learning how to discover and counteract the complex web
+                of forces underlying resistant organizational problems, you'll be able to make change inevitable.
+            </p>
+            <a class="link-button" href="" target="_blank">Join Now<i class="fas fa-arrow-right link-button-icon"></i>
+            </a>
+        </div>
+    </section>
+    <footer>
+        <h4 class="foot">Influencer Products</h4>
+        <p class="foot">Copyright <span>&copy;</span> Influencer products</p>
+        <p class="foot">All rights reserved</p>
+        <ul class="foot">
+            <li><i class="fab fa-instagram foot"></i></li>
+            <li><i class="fab fa-youtube foot"></i></li>
+            <li><i class="fab fa-twitter foot"></i></li>
+            <li><i class="fab fa-facebook-f foot"></i></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
